crates/bc-cli/tests/cli/snapshots/cli__transaction__list_empty_json.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
[]
----- stderr -----
