crates/bc-cli/tests/cli/snapshots/cli__transaction__reverse_existing_transaction.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
assertion_line: 157
expression: output
---
success: true
exit_code: 0
----- stdout -----
Reversed transaction: [TRANSACTION_ID]
Reversal transaction: [TRANSACTION_ID]
----- stderr -----
