crates/bc-cli/tests/cli/snapshots/cli__transaction__set_without_a_modifier_is_refused.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: --set Expenses:Groceries: nothing to change; name what changes after it
