crates/bc-cli/tests/cli/snapshots/cli__transaction__void_existing_transaction.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Voided transaction: [TRANSACTION_ID]
----- stderr -----
