crates/bc-cli/tests/cli/snapshots/cli__transaction__void_nonexistent_transaction_returns_error.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid transaction ID 'transaction_notavalidid000000000': invalid TransactionId: Suffix error: Invalid `TypeID` suffix: Suffix must be exactly 26 characters long
